--- a/client/client.csproj
+++ b/client/client.csproj
@@ -254,6 +254,7 @@
     <Compile Include="models\BlogGrpc.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\BlogRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
