--- a/server/packages.config
+++ b/server/packages.config
@@ -7,6 +7,7 @@
   <package id="Grpc" version="2.26.0" targetFramework="net472" />
   <package id="Grpc.Core" version="2.26.0" targetFramework="net472" />
   <package id="Grpc.Core.Api" version="2.26.0" targetFramework="net472" />
+  <package id="Grpc.Reflection" version="2.26.0" targetFramework="net472" />
   <package id="Grpc.Tools" version="2.26.0" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.1" targetFramework="net472" />
